修改了spring boot websocket跨域问题

--- a/TestiViewService/pom.xml
+++ b/TestiViewService/pom.xml
@@ -33,7 +33,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
   	</dependency> -->
-
+  	<!-- Spring boot websocket -->
+	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
 	<!--jdbc-->
     <dependency>
     	<groupId>org.springframework</groupId>
