--- a/TestiViewService/pom.xml
+++ b/TestiViewService/pom.xml
@@ -33,6 +33,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
   	</dependency> -->
+  	<!-- https://mvnrepository.com/artifact/com.thetransactioncompany/cors-filter -->
+  	<!-- 跨域filter -->
+  	<!-- 教程：https://www.cnblogs.com/SummerinShire/p/7219789.html -->
+	<dependency>
+	    <groupId>com.thetransactioncompany</groupId>
+	    <artifactId>cors-filter</artifactId>
+	    <version>2.6</version>
+	</dependency>
+  	
   	<!-- Spring boot websocket -->
 	<dependency>
         <groupId>org.springframework.boot</groupId>
